# Create bin directory (if ther isn`t)
#file(MAKE_DIRECTORY bin)

#add_subdirectory(Amostra, AnaliseImagem, Base, Estatistica, EstruturaDados, Grafico, InteligenciaArtificial, MetNum, Tempo)

# add_executable(bin/Permeabilidade_GrafoConexaoSerial
#    GrafoConexaoSerial/CGrafoConexaoSerial_Teste.cpp
#    GrafoConexaoSerial/grafo_main.cpp)
# target_link_libraries(bin/Permeabilidade_GrafoConexaoSerial ldsc)
