# ----------------------------------------Informações relativas a subdiretórios

# -------------------------------------------Informações relativas a instalação
instdir = $(pkglibdir)

# -----------------------------------------Informações relativas a distribuição
MAINTAINERCLEANFILES = Makefile.in Makefile 

EXTRA_DIST = 320220.* berea.ma2 imagem.* y.img y.ske *.txt

# -------------------------------------------Informações sobre flags adicionais

# ----------------------------Instruções para montagem de biblioteca específica

# -----------------------------------------Instruções para montagem de programa


# --------------------------------------------------------------------------FIM
