add_library(Grafo CObjetoGrafo.cpp COGComponenteGrafo.cpp COGLigacao.cpp COGSitio.cpp COGSitioDireita.cpp COGSitioDirLRCM.cpp COGSitioEsquerda.cpp COGSitioEsqLR.cpp COGSitioEsqLRCM.cpp COGSitioLR.cpp COGSitioDirLR.cpp COGSitioLRCM.cpp CGrafo.cpp CGrafoContorno.cpp CGra3Dby2D_M2.cpp CGra3Dby2D_M3.cpp CGra3Dby2D_M6.cpp CGra3Dby2D_M4.cpp    CGra3Dby2D.cpp CGra3Dby2D_M5.cpp CGra3Dby2D_M1.cpp)