# ----------------------------------------Informações relativas a subdiretórios

SUBDIRS= Gnuplot

# -------------------------------------------Informações relativas a instalação

# -----------------------------------------Informações relativas a distribuição

# -------------------------------------------Informações sobre flags adicionais

# ----------------------------Instruções para montagem de biblioteca específica

# --------------------------------------------------------------------------FIM

